Policy Creation script completed

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-loginUrl = https://successgi-uat.successit.net/SuccessGI/
+loginUrl = http://successit.cloud.wavemakeronline.com/SuccessGI/#/Login
 testsRoot = tests
 configFileDir = D:/GI Web App Automation/Data/ConfigData/
 dataFileDir = D:/GI Web App Automation/Data/TestData/
