--- a/test-output/old/GI Web App Automation/Polict Creation.properties
+++ b/test-output/old/GI Web App Automation/Polict Creation.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Polict Creation]
+[SuiteResult context=Polict Creation][SuiteResult context=Polict Creation check for duplicate policy number]
