Common function implemented for Log and Extent messages

--- a/test-output/old/GI Web App Automation/Polict Creation.properties
+++ b/test-output/old/GI Web App Automation/Polict Creation.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Polict Creation][SuiteResult context=Creating Debit note of Policy][SuiteResult context=Creating OR]
+[SuiteResult context=Polict Creation]
