Folder Name updated and run execution in headless mode

--- a/config.properties
+++ b/config.properties
@@ -1,17 +1,17 @@
 loginUrl = http://successit.cloud.wavemakeronline.com/SuccessGI/#/Login
 testsRoot = tests
-configFileDir = D:/GI Web App Automation/Data/ConfigData/
-dataFileDir = D:/GI Web App Automation/Data/TestData/
-resultFileDir = D:/GI Web App Automation/Data/Result/
-depFileDir = D:/GI Web App Automation/Data/Dependency/
+configFileDir = D:/GI Web App Automation Headless/Data/ConfigData/
+dataFileDir = D:/GI Web App Automation Headless/Data/TestData/
+resultFileDir = D:/GI Web App Automation Headless/Data/Result/
+depFileDir = D:/GI Web App Automation Headless/Data/Dependency/
 suiteName = famework
 testNGFileName = testng.xml
-chromeDriver = D:/GI Web App Automation/src/main/resources/chromedriver.exe
+chromeDriver = D:/GI Web App Automation Headless/src/main/resources/chromedriver.exe
 ieDriver = D:/IEDriverServer.exe
 chromeDataDir = C:/User/ADMIN/AppData/Local/Google/Chrome/User Data
 browser = chrome
-log4j = D:/GI Web App Automation/log4j.xml
-screenshot = D:/GI Web App Automation/screenshots/
-extentReport = D:/GI Web App Automation/extentreports/Test_Result.html
+log4j = D:/GI Web App Automation Headless/log4j.xml
+screenshot = D:/GI Web App Automation Headless/screenshots/
+extentReport = D:/GI Web App Automation Headless/extentreports/Test_Result.html
 fileUpload = AutoIT File Path.exe
 
