Maven Cleaned and Installed, removed some errors

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>com.automation</groupId>
   <artifactId>framework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+         <maven.compiler.source>1.7</maven.compiler.source>
+         <maven.compiler.target>1.7</maven.compiler.target>
+    </properties> 
   <dependencies>
   	
 	
@@ -47,11 +51,8 @@
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi</artifactId>
 	    <version>3.17</version>
-	</dependency><dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>3.17</version>
 	</dependency>
+	
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
@@ -70,7 +71,7 @@
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
 	    <version>6.9.10</version>
-	    <scope>test</scope>
+	    <scope>compile</scope>
 	</dependency>
   </dependencies>
   
